This typo should not have happened.

--- a/_error.html
+++ b/_error.html
@@ -15,7 +15,7 @@
 		<meta http-equiv="Content-Language" content="es,en" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta name="description" content="Mateus" portfolio." />
+		<meta name="description" content="Mateus' portfolio." />
 		<meta name="keywords" content="[Mateus] byUwUr, byuwur.dev, producción, productora, producción audiovisual, medios, fotografía, desarrollo, software, apps, webpages, páginas web" />
 		<meta name="author" content="[Mateus] byUwUr" />
 		<meta name="copyright" content="[Mateus] byUwUr" />
